# StrangerEngine

./: .gitignore  CMakeLists.txt  README.md  Stranger_Engine.sln
Sandbox/: Sandbox.vcxproj
Stranger/: Stranger.vcxproj
core/: CMakeLists.txt
core/include/: audio.h  core.h  entityComponentSystem.h  fileManager.h  logger.h  renderer.h
core/include/GraphicsAPIs/: graphicsAPI.h  openGL.h
core/include/components/: Component.h  Mesh.h  Transform.h
core/src/: core.cpp  entityComponentSystem.cpp  fileManager.cpp  logger.cpp  renderer.cpp
docs/: Documentation.docx
editor/: CMakeLists.txt
editor/include/: editor.h  mainwindow.h
editor/src/: editor.cpp  main.cpp  mainwindow.cpp
runtime/: CMakeLists.txt
runtime/include/: runtime.h
runtime/src/: main.cpp  runtime.cpp
